--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,32 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-      "baseUrl": "src",
-        "lib": [
+  "compilerOptions":{
+      "target":"es5",
+      "baseUrl":"src",
+      "lib":[
           "dom",
           "dom.iterable",
           "esnext"
-        ],
-          "allowJs": true,
-            "skipLibCheck": true,
-              "strict": false,
-                "forceConsistentCasingInFileNames": true,
-                  "noEmit": true,
-                    "incremental": true,
-                      "esModuleInterop": true,
-                        "module": "esnext",
-                          "moduleResolution": "node",
-                            "resolveJsonModule": true,
-                              "isolatedModules": true,
-                                "jsx": "preserve"
+      ],
+      "allowJs":true,
+      "skipLibCheck":true,
+      "strict":true,
+      "forceConsistentCasingInFileNames":true,
+      "noEmit":true,
+      "noImplicitAny":false,
+      "incremental":true,
+      "esModuleInterop":true,
+      "module":"esnext",
+      "moduleResolution":"node",
+      "resolveJsonModule":true,
+      "isolatedModules":true,
+      "jsx":"preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
+  "include":[
+      "next-env.d.ts",
+      "**/*.ts",
+      "**/*.tsx"
   ],
-    "exclude": [
+  "exclude":[
       "node_modules"
-    ]
+  ]
 }
