--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "ajv-dist": "^8.10.0",
+    "api": "^4.2.0",
     "axios": "^0.25.0",
-    "next": "12.0.10",
+    "next": "^12.1.0",
+    "nprogress": "^0.2.0",
+    "phoenix": "^1.6.6",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "video.js": "^7.17.0",
+    "videojs-contrib-quality-levels": "^2.1.0",
+    "videojs-hls-quality-selector": "^1.1.4"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
